--- a/chatter-api/package.json
+++ b/chatter-api/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.0",
     "cloudinary": "^1.37.1",
     "crypto": "^1.0.1",
+    "cors": "^2.8.5",
     "googleapis": "^118.0.0",
     "mongodb": "3.6",
     "mongoose": "^7.2.0",
