--- a/chatter-api/package.json
+++ b/chatter-api/package.json
@@ -32,8 +32,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.37.1",
-    "crypto": "^1.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "googleapis": "^118.0.0",
     "mongodb": "3.6",
     "mongoose": "^7.2.0",
@@ -50,6 +50,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
